--- a/UserHomePage/MainWindow.xaml
+++ b/UserHomePage/MainWindow.xaml
@@ -33,18 +33,20 @@
             
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.ColumnSpan="2" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row ="2" FontWeight="Bold" Margin="0 0 15 0">Popular leagues:</TextBlock>
-
-        <ListBox Grid.ColumnSpan="2" Grid.Row="5" FontWeight="Bold" MouseDoubleClick="ManageLeague_Clicked">Pojkar 14 Småland</ListBox>
-        <ListBox Grid.ColumnSpan="2" Grid.Row="6" FontWeight="Bold" MouseDoubleClick="ManageLeague_Clicked">Pojkar 16 småland</ListBox>
-        <ListBox Grid.ColumnSpan="2" Grid.Row="7" FontWeight="Bold" MouseDoubleClick="ManageLeague_Clicked">Pojkar 16 småland</ListBox>
-
-        <TextBox Name="searchTextBox" Grid.RowSpan="2" Grid.ColumnSpan="2" VerticalAlignment="Center" Grid.Row="2" Grid.Column="3"
-                 Margin="10,5,0,3" 
+        <TextBlock Grid.ColumnSpan="2" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center"
+                   Grid.Row ="1" FontWeight="Bold" Margin="0 0 15 0">Popular leagues:</TextBlock>
+        
+        <ListBox Name="SearchList" Grid.ColumnSpan="3" Grid.RowSpan="8" Grid.Row="3" Margin="5" Grid.Column="3"  FontWeight="Bold"
+                 MouseDoubleClick="ManageLeague_Clicked" MinHeight="200" MinWidth="150"></ListBox>
+        
+        <ListBox Name="LeagueList" Grid.Row="3" Grid.Column="0" Margin="5" Grid.RowSpan="8" Grid.ColumnSpan="3" MinWidth="150"
+                 MinHeight="200" MouseDoubleClick="ManageLeague_Clicked"/>
+        
+        <!--<TextBlock Grid.ColumnSpan="2" Grid.RowSpan="2" Grid.Row="1" Grid.Column="2" FontWeight="Bold" Text="Search"/>-->
+        
+        <TextBox Name="searchTextBox" Grid.RowSpan="2" Grid.ColumnSpan="3" VerticalAlignment="Center" Grid.Row="1" Grid.Column="3"
                  TextChanged="searchTextBox_TextChanged"/>
-        <TextBlock IsHitTestVisible="False" Grid.Row="2" Grid.Column="3" Text="Search"
-                   VerticalAlignment="Center" HorizontalAlignment="Left" Grid.RowSpan="2" Grid.ColumnSpan="2" 
-                   Margin="10" Foreground="Goldenrod" FontSize="9">
+        <TextBlock IsHitTestVisible="False" Grid.RowSpan="1" Grid.ColumnSpan="3" VerticalAlignment="Center" Grid.Row="1" Grid.Column="3" Text="Search for a player/team/league"  HorizontalAlignment="Left" Margin="5" Foreground="DarkGray">
             <TextBlock.Style>
                 <Style TargetType="{x:Type TextBlock}">
                     <Setter Property="Visibility" Value="Collapsed"/>
@@ -53,12 +55,11 @@
                             <Setter Property="Visibility" Value="Visible"/>
                         </DataTrigger>
                     </Style.Triggers>
-
                 </Style>
             </TextBlock.Style>
         </TextBlock>
 
-        <ListBox Grid.ColumnSpan="2" Grid.RowSpan="7" Grid.Row="5" Grid.Column="3" FontWeight="Bold" MouseDoubleClick="ManageLeague_Clicked"></ListBox>
+
 
     </Grid>
 </Window>
