--- a/KnatteliganWPF/CreateLeagueWindow.xaml
+++ b/KnatteliganWPF/CreateLeagueWindow.xaml
@@ -69,6 +69,9 @@
             <Button.IsEnabled>
                 <MultiBinding Converter="{StaticResource IsEnabledConverter}">
                     <Binding ElementName="leagueName" Path="(Validation.Errors)[0]"/>
+                    <Binding ElementName="leagueName" Path="Text"/>
+
+                    <Binding ElementName="TeamList" Path="Items.Count"/>
                 </MultiBinding>
             </Button.IsEnabled>
         </Button>
