--- a/KnatteliganWPF/AddPlayerWindow.xaml
+++ b/KnatteliganWPF/AddPlayerWindow.xaml
@@ -79,6 +79,7 @@
             <Button.IsEnabled>
                 <MultiBinding Converter="{StaticResource IsEnabledConverter}">
                     <Binding ElementName="PersonNameTextBox" Path="(Validation.Errors)[0]"/>
+                    <Binding ElementName="PersonNameTextBox" Path="Text"/>
                     <Binding ElementName="SocialSecurityNumberTextBox" Path="(Validation.Errors)[0]"/>
                 </MultiBinding>
             </Button.IsEnabled>
