--- a/KnatteliganWPF/AddTeamWindow.xaml
+++ b/KnatteliganWPF/AddTeamWindow.xaml
@@ -117,6 +117,7 @@
             <Button.IsEnabled>
                     <MultiBinding Converter="{StaticResource IsEnabledConverter}">
                         <Binding ElementName="TeamNameTxt" Path="(Validation.Errors)[0]"/>
+                    <Binding ElementName="TeamNameTxt" Path="Text"/>
                     <Binding ElementName="CoachNameTextBox" Path="(Validation.Errors)[0]"/>
                     <Binding ElementName="PersonalNumberTextBox" Path="(Validation.Errors)[0]"/>
                     <Binding ElementName="PhoneNumberTextBox" Path="(Validation.Errors)[0]"/>
