--- a/KnatteliganWPF/AddTeamWindow.xaml
+++ b/KnatteliganWPF/AddTeamWindow.xaml
@@ -56,7 +56,7 @@
 
 
         <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="3">Players</TextBlock>
-        <ListBox Name="PlayerList" Grid.ColumnSpan="4" Grid.RowSpan="4" Grid.Row="4" Grid.Column="0" SelectionChanged="PlayerList_SelectionChanged"></ListBox>
+        <ListBox Name="PlayerList" Grid.ColumnSpan="4" Grid.RowSpan="4" Grid.Row="4" Grid.Column="0"/>
 
         <TextBlock Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="2">Coach name</TextBlock>
         <TextBox Name="CoachNameTextBox" Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="3"
@@ -108,8 +108,9 @@
             </TextBox.Text>
         </TextBox>
 
-        <Button Name="EditPlayerBtn" IsEnabled="False" Grid.Row="8"  Grid.Column="0" Grid.RowSpan="1"  Margin="5" Click="EditPlayerBtn_Click">Edit</Button>
-        <Button Name="RemovePlayerBtn" IsEnabled="False"  Grid.Row="8" Grid.Column="2" Margin="5" Click="RemovePlayerBtn_Click"  >-</Button>
+        <Button Name="EditPlayerBtn" IsEnabled="{Binding ElementName=PlayerList, Path=SelectedItems.Count}"  Grid.Row="8"  Grid.Column="0" Grid.RowSpan="1"  Margin="5" Click="EditPlayerBtn_Click" >Edit</Button>
+
+        <Button Name="RemovePlayerBtn" IsEnabled="{Binding ElementName=PlayerList, Path=SelectedItems.Count}" Grid.Row="8" Grid.Column="2" Margin="5" Click="RemovePlayerBtn_Click">-</Button>
         <Button Grid.Row="8" Grid.Column="3"  Margin="5" Click="AddPlayer_Clicked">+</Button>
 
         <Button Grid.Row="12" Grid.Column="3" Margin="5" Grid.ColumnSpan="2" Click="CloseCommandHandler_Clicked">Cancel</Button>
