--- a/UserHomePage/MatchList.xaml
+++ b/UserHomePage/MatchList.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="UserHomePage.League"
+﻿<Window x:Class="UserHomePage.MatchList"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UserHomePage"
         mc:Ignorable="d"
-        Title="League" Height="400" Width="400">
+        Title="MatchList" Height="300" Width="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -32,7 +32,6 @@
             <ColumnDefinition Width="*"/>
 
         </Grid.ColumnDefinitions>
-        <DatePicker ></DatePicker>
         <Button Grid.Column="12" Grid.Row="0" Grid.ColumnSpan="2">Back</Button>
     </Grid>
 </Window>
