--- a/UserHomePage/PlayerStats.xaml
+++ b/UserHomePage/PlayerStats.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="UserHomePage.League"
+﻿<Window x:Class="UserHomePage.PlayerStats"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UserHomePage"
         mc:Ignorable="d"
-        Title="League" Height="400" Width="400">
+        Title="PlayerStats" Height="300" Width="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -32,7 +32,8 @@
             <ColumnDefinition Width="*"/>
 
         </Grid.ColumnDefinitions>
-        <DatePicker ></DatePicker>
+        <Button Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2">MatchList</Button>
+        <Button Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="2">PlayerStats</Button>
         <Button Grid.Column="12" Grid.Row="0" Grid.ColumnSpan="2">Back</Button>
     </Grid>
 </Window>
