--- a/UserHomePage/PlayerStats.xaml
+++ b/UserHomePage/PlayerStats.xaml
@@ -32,8 +32,14 @@
             <ColumnDefinition Width="*"/>
 
         </Grid.ColumnDefinitions>
-        <Button Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2">MatchList</Button>
-        <Button Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="2">PlayerStats</Button>
-        <Button Grid.Column="12" Grid.Row="0" Grid.ColumnSpan="2">Back</Button>
+        <TextBlock Grid.Column="0" Grid.Row="0" Text="Name" Margin="5,5,4.667,1.667"/>
+        <TextBlock Grid.Column="1" Grid.Row="0" Text="Team" Margin="5,5,4.667,1.667"/>
+        <TextBlock Grid.Column="2" Grid.Row="0" Text="Goals" Margin="5,5,4.667,1.667"/>
+        <TextBlock Grid.Column="3" Grid.Row="0" Text="Assists" Margin="5,5,4.667,1.667"/>
+        <TextBlock Grid.Column="4" Grid.Row="0" Text="Y.Cards" Margin="5,5,4.667,1.667"/>
+        <TextBlock Grid.Column="5" Grid.Row="0" Text="R.Cards" Margin="5,5,4.667,1.667"/>
+        <ListBox Name="PlayerList" Grid.Row="1" Grid.RowSpan="11" Grid.ColumnSpan="6"/>
+        
+        <Button Grid.Column="0" Grid.Row="13" Grid.ColumnSpan="1">Back</Button>
     </Grid>
 </Window>
