--- a/UserHomePage/League.xaml
+++ b/UserHomePage/League.xaml
@@ -48,6 +48,19 @@
         <ListBox Name="TeamList" Grid.ColumnSpan="8" Grid.RowSpan="10" Grid.Row="1"/>
         <TextBox Name="SearchTextBox" Grid.RowSpan="2" Grid.ColumnSpan="4" VerticalAlignment="Center" Grid.Row="1" Grid.Column="8"
                  TextChanged="searchTextBox_TextChanged"/>
+        <TextBlock IsHitTestVisible="False" Grid.RowSpan="1" Grid.ColumnSpan="3" VerticalAlignment="Center" Grid.Row="1" Grid.Column="3" Text="Search..."  HorizontalAlignment="Left" Margin="5" Foreground="DarkGray">
+            <TextBlock.Style>
+                <Style TargetType="{x:Type TextBlock}">
+                    <Setter Property="Visibility" Value="Collapsed"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Text, ElementName=SearchTextBox}" Value="">
+                            <Setter Property="Visibility" Value="Visible"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBlock.Style>
+        </TextBlock>
+        <ListBox Name="SearchList" Grid.Column="8" Grid.Row="2" Grid.ColumnSpan="4" Grid.RowSpan="9"/>
         <Button Grid.Row="13" Margin="0,0.333,0.333,-0.333">Back</Button>
     </Grid>
 </Window>
