--- a/UserHomePage/League.xaml
+++ b/UserHomePage/League.xaml
@@ -37,18 +37,10 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="Pos" Grid.Column="0" Margin="5"/>
-        <TextBlock Text="Team Name" Margin="5" Grid.Column="1"/>
-        <TextBlock Text="GP" Margin="5" Grid.Column="2"/>
-        <TextBlock Text="W" Margin="5" Grid.Column="3"/>
-        <TextBlock Text="D" Margin="5" Grid.Column="4"/>
-        <TextBlock Text="L" Margin="5" Grid.Column="5"/>
-        <TextBlock Text="+/-" Margin="5" Grid.Column="6"/>
-        <TextBlock Text="Pts" Margin="5" Grid.Column="7"/>
-        <ListBox Name="TeamList" Grid.ColumnSpan="8" Grid.RowSpan="10" Grid.Row="1"/>
+
         <TextBox Name="SearchTextBox" Grid.RowSpan="2" Grid.ColumnSpan="4" VerticalAlignment="Center" Grid.Row="1" Grid.Column="8"
                  TextChanged="searchTextBox_TextChanged"/>
-        <TextBlock IsHitTestVisible="False" Grid.RowSpan="1" Grid.ColumnSpan="3" VerticalAlignment="Center" Grid.Row="1" Grid.Column="3" Text="Search..."  HorizontalAlignment="Left" Margin="5" Foreground="DarkGray">
+        <TextBlock IsHitTestVisible="False" Grid.RowSpan="1" Grid.ColumnSpan="3" VerticalAlignment="Center" Grid.Row="1" Grid.Column="8" Text="Search..."  HorizontalAlignment="Left" Margin="5" Foreground="DarkGray">
             <TextBlock.Style>
                 <Style TargetType="{x:Type TextBlock}">
                     <Setter Property="Visibility" Value="Collapsed"/>
@@ -64,5 +56,6 @@
         <Button Grid.Row="13" Margin="0,0.333,0.333,-0.333">Back</Button>
         <Button Grid.Row="11" Grid.Column="4" Grid.ColumnSpan="2" Click="Button_Click">Players</Button>
         <Button Grid.Row="11" Grid.Column="6" Grid.ColumnSpan="2" Click="Button_Click_1">Matches</Button>
+        <DataGrid AutoGeneratingColumn="DataGrid_OnAutoGeneratingColumn"  Name="DataGrid" HorizontalAlignment="Left" Margin="29,28.333,0,0" Grid.Row="1" VerticalAlignment="Top" Grid.ColumnSpan="8" Grid.RowSpan="10"/>
     </Grid>
 </Window>
