--- a/KnatteliganWPF/MatchProtocolWindow.xaml
+++ b/KnatteliganWPF/MatchProtocolWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="KnatteliganWPF.MatchProtocol"
+﻿<Window x:Class="KnatteliganWPF.MatchProtocolWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:KnatteliganWPF"
         xmlns:converters="clr-namespace:KnatteliganWPF.Converters"
         mc:Ignorable="d"
-        Title="MatchProtocol" Height="420" Width="500">
+        Title="MatchProtocolWindow" Height="420" Width="500">
     <Window.Resources>
         <converters:MatchEventToStringConverter x:Key="MatchEventToStringConverter" />
     </Window.Resources>
