--- a/UserHomePage/PlayerStats.xaml
+++ b/UserHomePage/PlayerStats.xaml
@@ -32,14 +32,7 @@
             <ColumnDefinition Width="*"/>
 
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Grid.Row="0" Text="Name" Margin="5,5,4.667,1.667"/>
-        <TextBlock Grid.Column="1" Grid.Row="0" Text="Team" Margin="5,5,4.667,1.667"/>
-        <TextBlock Grid.Column="2" Grid.Row="0" Text="Goals" Margin="5,5,4.667,1.667"/>
-        <TextBlock Grid.Column="3" Grid.Row="0" Text="Assists" Margin="5,5,4.667,1.667"/>
-        <TextBlock Grid.Column="4" Grid.Row="0" Text="Y.Cards" Margin="5,5,4.667,1.667"/>
-        <TextBlock Grid.Column="5" Grid.Row="0" Text="R.Cards" Margin="5,5,4.667,1.667"/>
-        <ListBox Name="PlayerList" Grid.Row="1" Grid.RowSpan="11" Grid.ColumnSpan="6"/>
-        
-        <Button Grid.Column="0" Grid.Row="13" Grid.ColumnSpan="1">Back</Button>
+        <DataGrid HorizontalAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" VerticalAlignment="Stretch" Grid.ColumnSpan="8" Grid.RowSpan="8" AutoGeneratingColumn="DataGrid_OnAutoGeneratingColumn" Name="DataGrid"/>
+        <Button  Grid.Column="0" Grid.Row="13" Grid.ColumnSpan="1">Back</Button>
     </Grid>
 </Window>
