--- a/UserHomePage/League.xaml
+++ b/UserHomePage/League.xaml
@@ -53,7 +53,7 @@
             </TextBlock.Style>
         </TextBlock>
         <ListBox Name="SearchList" Grid.Column="8" Grid.Row="2" Grid.ColumnSpan="4" Grid.RowSpan="9"/>
-        <Button Grid.Row="13" Margin="0,0.333,0.333,-0.333">Back</Button>
+        <Button Click="ButtonBase_OnClick" Grid.Row="13" Margin="0,0.333,0.333,-0.333">Back</Button>
         <Button Grid.Row="11" Grid.Column="4" Grid.ColumnSpan="2" Click="Button_Click">Players</Button>
         <Button Grid.Row="11" Grid.Column="6" Grid.ColumnSpan="2" Click="Button_Click_1">Matches</Button>
         <DataGrid MouseDoubleClick="DataGrid_OnMouseDoubleClick" IsReadOnly="True" ColumnWidth="*" AutoGeneratingColumn="DataGrid_OnAutoGeneratingColumn"  Name="DataGrid" HorizontalAlignment="Stretch" Margin="29,28.333,0,0" Grid.Row="1" VerticalAlignment="Stretch" Grid.ColumnSpan="8" Grid.RowSpan="10"/>
