--- a/UserHomePage/PlayerStatsWindow.xaml
+++ b/UserHomePage/PlayerStatsWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="UserHomePage.PlayerStats"
+﻿<Window x:Class="UserHomePage.PlayerStatsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UserHomePage"
         mc:Ignorable="d"
-        Title="PlayerStats" Height="300" Width="300">
+        Title="PlayerStatsWindow" Height="300" Width="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
