We can now set the startsquad when we save

--- a/KnatteliganWPF/MatchProtocolWindow.xaml
+++ b/KnatteliganWPF/MatchProtocolWindow.xaml
@@ -36,10 +36,10 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <TextBlock Name="HomeTeamName" Grid.Row="1" Grid.Column="0" TextAlignment="Right" Grid.ColumnSpan="3"
-                   Margin="10,26,46,12" Grid.RowSpan="2" FontWeight="Bold" FontSize="16"/>
+                   Margin="10,26,46,12" Grid.RowSpan="2" FontWeight="Bold" FontSize="16" />
 
         <TextBlock Name="AwayTeamName" Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="3" Margin="46,26,10,9"
-                   Grid.RowSpan="2" FontWeight="Bold" FontSize="16"/>
+                   Grid.RowSpan="2" FontWeight="Bold" FontSize="16" />
 
         <ListBox Name="HomeTeamList" Grid.ColumnSpan="3" Grid.RowSpan="7" Grid.Row="4" Grid.Column="0"
                  Margin="5,12,51,17" FontWeight="Bold" SelectionChanged="List_OnSelected" />
@@ -64,8 +64,7 @@
                 Click="AddRedCard_OnClick" />
 
 
-        <DatePicker Name="DatePicker" Width="110" Grid.ColumnSpan="3" Grid.Column="2" Margin="33,5,26,0"
-                    SelectedDateChanged="DatePicker_OnSelectedDateChanged" />
+        <DatePicker Name="DatePicker" Width="110" Grid.ColumnSpan="3" Grid.Column="2" Margin="33,5,26,0" />
         <Button Width="110" Grid.Row="0" Grid.Column="5" Grid.ColumnSpan="2" Click="ButtonAddAwayTeamSquad_OnClick"
                 Content="Add away team squad" />
         <Button Width="110" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Click="ButtonAddHomeTeamSquad_OnClick"
@@ -93,8 +92,7 @@
 
         <ListBox Grid.Row="2" Name="AwayTeamMatchEvents" BorderThickness="0" Grid.Column="4" Grid.ColumnSpan="3"
                  Margin="41,23,15,0" Grid.RowSpan="2" FontWeight="Bold" FontSize="9"
-                 MouseDoubleClick="RemoveEvent_OnMouseDoubleClick"
-        >
+                 MouseDoubleClick="RemoveEvent_OnMouseDoubleClick">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -106,11 +104,13 @@
         </ListBox>
 
 
-        <TextBlock Name="HomeTeamGoals" Grid.Column="2" TextAlignment="Center" Margin="15,0,51,5" FontWeight="Bold" FontSize="40"
-                   Grid.RowSpan="2" Grid.ColumnSpan="2" Grid.Row="1" Text="0"/>
+        <TextBlock Name="HomeTeamGoals" Grid.Column="2" TextAlignment="Center" Margin="15,0,51,5" FontWeight="Bold"
+                   FontSize="40"
+                   Grid.RowSpan="2" Grid.ColumnSpan="2" Grid.Row="1" Text="0" />
 
-        <TextBlock Name="AwayTeamGoals" Grid.Column="3" TextAlignment="Center" Margin="51,0,15,5" FontWeight="Bold" FontSize="40"
-                   Grid.RowSpan="2" Grid.ColumnSpan="2" Grid.Row="1" Text="0"/>
+        <TextBlock Name="AwayTeamGoals" Grid.Column="3" TextAlignment="Center" Margin="51,0,15,5" FontWeight="Bold"
+                   FontSize="40"
+                   Grid.RowSpan="2" Grid.ColumnSpan="2" Grid.Row="1" Text="0" />
 
         <TextBlock Grid.Column="3" TextAlignment="Center" Margin="5,24,10,24" FontWeight="Bold" FontSize="10"
                    Grid.RowSpan="3" RenderTransformOrigin="0.341,0.971">
