--- a/KnatteliganWPF/AddPlayerWindow.xaml
+++ b/KnatteliganWPF/AddPlayerWindow.xaml
@@ -82,6 +82,7 @@
                     <Binding ElementName="PersonNameTextBox" Path="(Validation.Errors)[0]"/>
                     <Binding ElementName="PersonNameTextBox" Path="Text"/>
                     <Binding ElementName="PersonalNumberTextBox" Path="(Validation.Errors)[0]"/>
+                    <Binding ElementName="PersonalNumberTextBox" Path="Text"/>
                 </MultiBinding>
             </Button.IsEnabled>
         </Button>
@@ -92,6 +93,7 @@
                     <Binding ElementName="PersonNameTextBox" Path="(Validation.Errors)[0]"/>
                     <Binding ElementName="PersonNameTextBox" Path="Text"/>
                     <Binding ElementName="PersonalNumberTextBox" Path="(Validation.Errors)[0]"/>
+                    <Binding ElementName="PersonalNumberTextBox" Path="Text"/>
                 </MultiBinding>
             </Button.IsEnabled>
         </Button>
