--- a/UserHomePage/LeaguePage.xaml
+++ b/UserHomePage/LeaguePage.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="UserHomePage.LeagueWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UserHomePage"
-        mc:Ignorable="d"
-        Title="League" Height="400" Width="400">
+﻿<Page x:Class="UserHomePage.LeaguePage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:UserHomePage"
+      mc:Ignorable="d" 
+      d:DesignHeight="300" d:DesignWidth="300"
+      Title="LeaguePage">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -59,4 +60,5 @@
         <DataGrid MouseDoubleClick="DataGrid_OnMouseDoubleClick" IsReadOnly="True" ColumnWidth="*" AutoGeneratingColumn="DataGrid_OnAutoGeneratingColumn"  Name="DataGrid" HorizontalAlignment="Stretch" Margin="29,28.333,0,0" Grid.Row="1" VerticalAlignment="Stretch" Grid.ColumnSpan="8"
                   Grid.Column="0" Grid.RowSpan="10" LoadingRow="DataGrid_OnLoadingRow"/>
     </Grid>
-</Window>
+
+</Page>
