--- a/UserHomePage/MatchProtocolPage.xaml
+++ b/UserHomePage/MatchProtocolPage.xaml
@@ -1,15 +1,17 @@
-﻿<Window x:Class="UserHomePage.MatchProtocol"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UserHomePage"
-        xmlns:converters1="clr-namespace:KnatteliganWPF.Converters;assembly=KnatteliganWPF"
-        mc:Ignorable="d"
-        Title="MatchProtocol" Height="420" Width="500">
-    <Window.Resources>
-        <converters1:MatchEventToStringConverter x:Key="MatchEventToStringConverter" />
-    </Window.Resources>
+﻿<Page x:Class="UserHomePage.MatchProtocolPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:UserHomePage"
+      xmlns:converters="clr-namespace:KnatteliganWPF.Converters;assembly=KnatteliganWPF"
+      mc:Ignorable="d" 
+      d:DesignHeight="300" d:DesignWidth="300"
+      Title="MatchProtocolPage">
+
+    <Page.Resources>
+        <converters:MatchEventToStringConverter x:Key="MatchEventToStringConverter" />
+    </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -42,7 +44,7 @@
                    Grid.RowSpan="2" FontWeight="Bold" FontSize="16"/>
 
         <TextBlock Name="ShowDate" Width="110" Grid.Row="0" Grid.ColumnSpan="3" Grid.Column="2" Margin="33,5,26,0"   />
-      
+
         <Label Name="PlayerNameLabel" Grid.Column="2" HorizontalAlignment="Left" Margin="38,27,0,0" Grid.Row="3"
                VerticalAlignment="Top" RenderTransformOrigin="0.351,-0.5" Grid.ColumnSpan="2" Grid.RowSpan="2"
                FontWeight="Bold" />
@@ -85,10 +87,8 @@
                    Grid.RowSpan="3" RenderTransformOrigin="0.341,0.971">
             <Run Text="-" FontSize="40" />
         </TextBlock>
-        
-        <Button Grid.Row="12" Click="Back_OnClick" Content="Back"  />
 
         <TextBlock Name="MatchWeek" Grid.Column="6"  />
 
     </Grid>
-</Window>
+</Page>
