--- a/UserHomePage/SerieSchedulePage.xaml
+++ b/UserHomePage/SerieSchedulePage.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="UserHomePage.MatchListWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UserHomePage"
-        mc:Ignorable="d"
-        Activated="MatchListWindowActivated"
-        Title="MatchProtocolWindow" Height="400" Width="400">
+﻿<Page x:Class="UserHomePage.SerieSchedulePage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:UserHomePage"
+      mc:Ignorable="d" 
+      d:DesignHeight="300" d:DesignWidth="300"
+      Title="SerieSchedulePage">
+
     <Grid Margin="0,0,2,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -50,9 +51,7 @@
             Grid.ColumnSpan="3"
             Name="CurrentMatchWeekMatches"
             MouseDoubleClick="CurrentMatchWeekMatches_OnMouseDoubleClick" />
-        <Button Click="Back_Click"  Content="Back" HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Top" Width="75" />
         <Button Grid.ColumnSpan="2" Content="All matches" Grid.Column="1" HorizontalAlignment="Left" Margin="4,0,0,0" Grid.Row="8" VerticalAlignment="Top" Width="75" Click="AllMatches_Click"/>
     </Grid>
 
-
-</Window>
+</Page>
